--- a/templates/types.html
+++ b/templates/types.html
@@ -30,7 +30,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Amendment to LLC Operating Agreement&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 An Amendment to an LLC Operating Agreement is an internal written document detailing any changes to the
@@ -42,7 +42,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Articles of Incorporation&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 An Articles of Incorporation is a set of formal documents that contain basic information about a company
@@ -54,7 +54,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Assignment of Partnership Interest &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 An Assignment of Partnership Interest is a legal document that transfers the rights to receive benefits
@@ -67,7 +67,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Business Plan Template &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A Business Purchase Agreement is a legally enforceable contract that documents the sale of a business.
@@ -79,7 +79,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Joint Venture Agreement &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A Joint Venture Agreement is a contract between two or more parties who want to do business together.
@@ -91,7 +91,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Limited Liability Company (LLC) Operating Agreement &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 An LLC Operating Agreement is an internal written document among members of a Limited Liability Company
@@ -103,7 +103,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Partnership Agreement &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A Partnership Agreement is an internal written document detailing the terms of a partnership. A
@@ -130,7 +130,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Affidavit of Identity&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
 
@@ -143,7 +143,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Affidavit of Service&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 An Affidavit of Service is a sworn legal document that states that a server delivered specified papers
@@ -154,7 +154,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Affidavit of Title&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 An affidavit of title is a document created by a person selling property - generally in the form of a
@@ -168,7 +168,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Arbitration Agreement &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 An Arbitration Agreement stipulates that any disagreements that might arise through business dealings
@@ -179,7 +179,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Business Contract &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A business contract is an agreement in which each party agrees to an exchange, typically involving
@@ -192,7 +192,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Cease and Desist Letter&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A Cease and Desist letter is sent to an individual or business that is engaging in unlawful behavior.
@@ -203,7 +203,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">End User License Agreement &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 An End User License Agreement is a contract between two parties -- the licensor and the licensee -- for
@@ -230,7 +230,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Bill of Sale&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
 
@@ -242,7 +242,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Boat Bill of Sale&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A Boat Bill of Sale documents the sale or transfer of a motorboat, sailboat, yacht, jet ski, watercraft,
@@ -253,7 +253,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Buy-Sell Agreement&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A buy-sell agreement is a contract drawn up to protect a business in the event something happens to one
@@ -266,7 +266,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Construction Contract Agreement&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A Construction Contract Agreement is a legal document that officially recognizes a legally binding
@@ -277,7 +277,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Firearm Bill of Sale &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A firearm bill of sale is a legal document that memorializes the sale of a handgun, rifle, or shotgun
@@ -289,7 +289,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Horse Bill of Sale&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 Create a free horse bill of sale form in minutes with step-by-step instructions. A bill of sale
@@ -316,7 +316,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Employee Non-Disclosure Agreement (NDA)&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A company often asks employees with advanced knowledge of their confidential information to sign an NDA.
@@ -327,7 +327,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Employment Agreement&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                     This article outlines the situations in which an Employee Contract should be used, the protection it offers both parties...	Learn More
@@ -337,7 +337,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Buy-Sell Agreement&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A buy-sell agreement is a contract drawn up to protect a business in the event something happens to one
@@ -350,7 +350,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Construction Contract Agreement&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A Construction Contract Agreement is a legal document that officially recognizes a legally binding
@@ -361,7 +361,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Firearm Bill of Sale &nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 A firearm bill of sale is a legal document that memorializes the sale of a handgun, rifle, or shotgun
@@ -373,7 +373,7 @@
         <div class="card-content">
             <span class="card-title contractTitleList">Horse Bill of Sale&nbsp
                 <div class="chip right seeDetails"><a style="color:white"
-                        href="/contract/'+ output.output[i].businessContractId +'">Create Document</a></div>
+                        href="/create">Create Document</a></div>
             </span>
             <p style="color: grey">
                 Create a free horse bill of sale form in minutes with step-by-step instructions. A bill of sale
