--- a/templates/listContracts.html
+++ b/templates/listContracts.html
@@ -5,7 +5,7 @@
 <!-- Header -->
 <div class="row valign-wrapper">
   <div class="col m6">
-    <h4 class="headingListContract left" style="color:#e91e63"><i class="medium material-icons left"></i>Your
+    <h4 class="headingListContract left" style="color:#e91e63;"><i class="medium material-icons left"></i>Your
       Contracts</h4>
   </div>
   <div class="col m6">
