localhost domain changed

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </div><h5 id="currentParticipant"></h5></a></li>
-    <li><a class="subheader1a"  href="http://localhost:3000/auth/google" style="color:black" id="currentDesignation"></a></li>
+    <li><a class="subheader1a"  href="http://13.52.29.9:3000/auth/google" style="color:black" id="currentDesignation"></a></li>
     <li><a class="subheader"  style="color:black" id="accountBalanceNav"></a></li><br>
     
 
